cloud/ingress-ws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ws
  namespace: cloud
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: cloud.local.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloud-app
            port:
              number: 8081
